webui/css: fix overflow

--- a/webui/styles.css
+++ b/webui/styles.css
@@ -167,6 +167,7 @@ label {
     display: flex;
     flex-direction: column;
     gap: 2px;
+    word-break: break-all;
 }
 
 .reminder {
